@startuml

title __RESPONSES's Class Diagram__\n

  namespace yhames.pro.project.afis {
    namespace responses {
      class yhames.pro.project.afis.responses.MatchResponse {
          + MatchResponse()
          + send()
          - serialize()
      }
    }
  }
  

  namespace yhames.pro.project.afis {
    namespace responses {
      abstract class yhames.pro.project.afis.responses.Response {
          {abstract} + send()
      }
    }
  }
  

  yhames.pro.project.afis.responses.MatchResponse -up-|> yhames.pro.project.afis.responses.Response
  yhames.pro.project.afis.responses.MatchResponse o-- yhames.pro.project.afis.matchers.Match : match


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
